--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "with-tailwind",
-  "private": true,
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "check-types": "turbo run check-types",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "prettier": "^3.5.3",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "turbo": "^2.5.3"
-  },
-  "packageManager": "pnpm@8.15.6",
-  "engines": {
-    "node": ">=18"
-  }
+    "name": "with-tailwind",
+    "private": true,
+    "scripts": {
+        "build": "turbo run build",
+        "dev": "turbo run dev",
+        "lint": "turbo run lint",
+        "format": "biome format --write .",
+        "check": "biome check --write .",
+        "clean": "turbo clean && rm -rf node_modules",
+        "check-types": "turbo run check-types",
+        "test": "turbo test"
+    },
+    "devDependencies": {
+        "turbo": "^2.5.3"
+    },
+    "packageManager": "pnpm@8.15.6",
+    "engines": {
+        "node": ">=18"
+    }
 }
