--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,7 +17,8 @@
         "@repo/ui": "workspace:*",
         "next": "^15.3.0",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "@repo/logger": "workspace:*"
     },
     "devDependencies": {
         "@repo/tailwind-config": "workspace:*",
