--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -6,11 +6,16 @@
     "exports": {
         ".": {
             "import": "./dist/index.mjs"
+        },
+        "./client": {
+            "import": "./dist/client.mjs"
+        },
+        "./server": {
+            "import": "./dist/server.mjs"
         }
     },
     "scripts": {
-        "build": "tsup src/index.ts --format esm --dts",
-        "dev": "tsup src/index.ts --watch",
+        "build": "tsup src/index.ts src/client.ts src/server.ts --format esm --dts",
         "check-types": "tsc --noEmit",
         "lint": "biome check .",
         "format": "biome format --write .",
@@ -22,7 +27,9 @@
         "zod": "^3.24.4"
     },
     "devDependencies": {
+        "@types/node": "^22.15.3",
         "@repo/typescript-config": "workspace:*",
-        "tsup": "^8.4.0"
+        "tsup": "^8.4.0",
+        "vite": "^6.3.5"
     }
 }
