--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,12 @@
 {
     "$schema": "https://turborepo.com/schema.json",
+    "globalDependencies": [".env"],
     "ui": "tui",
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
             "inputs": ["$TURBO_DEFAULT$", ".env*"],
-            "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+            "outputs": ["dist/**"]
         },
         "lint": {
             "dependsOn": ["^lint"]
