--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
-# Logger
-LOG_LEVEL = 'LOG'
-LOG_INCLUDE_TIMESTAMPS = true
-LOG_INCLUDE_LEVEL = true
-LOG_USE_COLORS = true
+# Apps variables for the frontend and backend
+VITE_API_PORT = 8080
+VITE_API_HOST = 'http://localhost'
+
+# Apps variables only for backend
+API_CORS_ALLOWED_ORIGINS = ['http://localhost:3000']
+
+# Logger for the frontend and backend
+VITE_LOG_LEVEL = 'LOG'
+VITE_LOG_INCLUDE_TIMESTAMPS = true
+VITE_LOG_INCLUDE_LEVEL = true
+VITE_LOG_USE_COLORS = true
