misc: update biome config

--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -16,7 +16,8 @@
             "**/coverage/**",
             "**/.output/**",
             "**/.vinxi/**",
-            "**/routeTree.gen.ts"
+            "**/routeTree.gen.ts",
+            "**/*.astro"
         ]
     },
     "organizeImports": {
