--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ VITE_API_HOST = 'http://localhost'
 
 # Apps variables only for backend
 API_CORS_ALLOWED_ORIGINS = ['http://localhost:3000']
+DATABASE_URL = 'postgresql://user:password@localhost:5432/dbname'
 
 # Logger for the frontend and backend
 VITE_LOG_LEVEL = 'LOG'
