feat: added db package (configs and schemas)

--- a/packages/biome-config/biome.json
+++ b/packages/biome-config/biome.json
@@ -78,6 +78,16 @@
                     }
                 }
             }
+        },
+        {
+            "include": ["./packages/db/src/seeds/**"],
+            "linter": {
+                "rules": {
+                    "suspicious": {
+                        "noConsoleLog": "off"
+                    }
+                }
+            }
         }
     ]
 }
