--- a/.github/workflows/refresh-search.yml
+++ b/.github/workflows/refresh-search.yml
@@ -16,16 +16,16 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up pnpm
-        uses: pnpm/action-setup@v4 # O la versión más reciente
+        uses: pnpm/action-setup@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'pnpm' # Habilita el caching para pnpm
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile # O simplemente pnpm install si prefieres
+        run: pnpm install --frozen-lockfile
 
       - name: Refresh materialized view
-        run: node packages/db/scripts/refresh-search-view.js # Asegúrate que este script se ejecute con pnpm si es necesario, p.ej. pnpm run tu-script-de-refresh
+        run: node packages/db/scripts/refresh-search-view.mjs
