--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,16 +19,18 @@
         "db:seed:example": "tsx ./src/seeds/example.seed.ts"
     },
     "dependencies": {
-        "@repo/types": "workspace:*",
-        "@repo/schemas": "workspace:*",
-        "@repo/utils": "workspace:*",
         "@repo/config": "workspace:*",
         "@repo/logger": "workspace:*",
+        "@repo/schemas": "workspace:*",
+        "@repo/types": "workspace:*",
+        "@repo/utils": "workspace:*",
+        "bcrypt": "^6.0.0",
         "drizzle-orm": "^0.29.5",
         "pg": "^8.11.1"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
+        "@types/bcrypt": "^5.0.2",
         "@types/node": "^22.15.3",
         "@types/pg": "^8.15.1",
         "drizzle-kit": "^0.20.18",
