--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,13 +2,32 @@
     "extends": "@repo/typescript-config/base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "target": "ESNext",
-        "module": "ESNext",
-        "moduleResolution": "bundler",
+        "rootDir": "../../",
+        "target": "ES2022",
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext",
+        "lib": ["ES2022"],
+        "types": ["node"],
+        "resolveJsonModule": true,
+        "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@repo/config": ["../../packages/config/src/index.ts"],
+            "@repo/config/*": ["../../packages/config/src/*"],
+            "@repo/db": ["../../packages/db/src/index.ts"],
+            "@repo/db/*": ["../../packages/db/src/*"],
+            "@repo/logger": ["../../packages/logger/src/index.ts"],
+            "@repo/logger/*": ["../../packages/logger/src/*"],
+            "@repo/schemas": ["../../packages/schemas/src/index.ts"],
+            "@repo/schemas/*": ["../../packages/schemas/src/*"],
+            "@repo/types": ["../../packages/types/src/index.ts"],
+            "@repo/types/*": ["../../packages/types/src/*"],
+            "@repo/utils": ["../../packages/utils/src/index.ts"],
+            "@repo/utils/*": ["../../packages/utils/src/*"],
+            "@repo/tailwind-config": ["../../packages/tailwind-config/src/index.ts"],
+            "@repo/tailwind-config/*": ["../../packages/tailwind-config/src/*"]
         }
     },
     "include": ["src"],
-    "exclude": ["dist", "build", "node_modules"]
+    "exclude": ["dist", "node_modules"]
 }
