--- a/packages/config/tsconfig.json
+++ b/packages/config/tsconfig.json
@@ -7,6 +7,6 @@
         "declarationMap": true,
         "strict": true
     },
-    "include": ["src"],
+    "include": ["src", "src/vite-env.d.ts"],
     "exclude": ["dist", "node_modules"]
 }
