fix: update tsconfig in types package

--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -4,10 +4,7 @@
         "outDir": "dist",
         "rootDir": "src",
         "declaration": true,
-        "declarationMap": true,
-        "composite": true,
-        "incremental": true,
-        "strict": true
+        "declarationMap": true
     },
     "include": ["src"],
     "exclude": ["dist", "node_modules"]
