--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -38,17 +38,21 @@
         "@repo/types": "workspace:*",
         "@repo/utils": "workspace:*",
         "bcrypt": "^6.0.0",
-        "drizzle-orm": "^0.29.5",
-        "pg": "^8.11.1"
+        "drizzle-orm": "^0.29.5"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/bcrypt": "^5.0.2",
         "@types/node": "^22.15.3",
         "@types/pg": "^8.15.1",
+        "dotenv": "^16.4.5",
         "drizzle-kit": "^0.20.18",
+        "pg": "^8.11.1",
         "tsx": "^4.7.0",
         "tsup": "^8.4.0",
         "typescript": "^5.8.3"
+    },
+    "peerDependencies": {
+        "pg": "^8.11.1"
     }
 }
