--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -15,19 +15,21 @@
     "dependencies": {
         "@hono/node-server": "^1.14.1",
         "@hono/zod-validator": "^0.5.0",
-        "hono": "^4.7.8",
-        "zod": "^3.24.4",
-        "jose": "^5.2.3",
         "@repo/config": "workspace:*",
         "@repo/db": "workspace:*",
         "@repo/logger": "workspace:*",
+        "@repo/schemas": "workspace:*",
         "@repo/types": "workspace:*",
         "@repo/utils": "workspace:*",
-        "@repo/schemas": "workspace:*"
+        "hono": "^4.7.8",
+        "jose": "^5.2.3",
+        "pg": "^8.15.6",
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
+        "@types/pg": "^8.15.1",
         "tsx": "^4.7.1",
         "typescript": "^5.8.3"
     }
