--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "tsx watch src/index.ts",
-        "build": "tsc",
+        "build": "tsup src/index.ts",
         "start": "node dist/index.js",
         "clean": "rm -rf node_modules dist",
         "lint": "biome check .",
@@ -21,6 +21,7 @@
         "@repo/schemas": "workspace:*",
         "@repo/types": "workspace:*",
         "@repo/utils": "workspace:*",
+        "dotenv": "^16.5.0",
         "hono": "^4.7.8",
         "jose": "^5.2.3",
         "pg": "^8.15.6",
@@ -30,6 +31,7 @@
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
         "@types/pg": "^8.15.1",
+        "tsup": "^8.4.0",
         "tsx": "^4.7.1",
         "typescript": "^5.8.3"
     }
