--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,12 +4,13 @@
     "private": true,
     "type": "module",
     "types": "dist/index.d.ts",
+    "files": ["dist"],
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts"
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
         }
     },
-    "files": ["dist"],
     "scripts": {
         "build": "tsc",
         "dev": "tsc --watch",
