--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -24,6 +24,7 @@
         "clean": "rm -rf node_modules dist"
     },
     "dependencies": {
+        "dotenv": "^16.5.0",
         "chalk": "^5.4.1",
         "@repo/config": "workspace:*"
     },
