--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,12 +3,13 @@
     "version": "0.0.0",
     "private": true,
     "type": "module",
-    "types": "dist/index.d.ts",
+    "types": "./src/index.ts",
     "files": ["dist"],
+    "main": "./src/index.ts",
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/index.js"
+            "types": "./src/index.ts",
+            "import": "./src/index.ts"
         }
     },
     "scripts": {
