--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -3,17 +3,17 @@
     "version": "0.0.0",
     "private": true,
     "type": "module",
-    "types": "./src/index.ts",
-    "files": ["dist"],
-    "main": "./src/index.ts",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "exports": {
         ".": {
-            "types": "./src/index.ts",
-            "import": "./src/index.ts"
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
         }
     },
+    "files": ["dist"],
     "scripts": {
-        "build": "tsc",
+        "build": "tsup src/index.ts --format esm,cjs --dts",
         "dev": "tsc --watch",
         "check-types": "tsc --noEmit",
         "lint": "biome check .",
@@ -26,6 +26,7 @@
         "@repo/utils": "workspace:*"
     },
     "devDependencies": {
+        "tsup": "^8.4.0",
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
         "typescript": "^5.8.3"
