--- a/package.json
+++ b/package.json
@@ -31,12 +31,17 @@
         "@biomejs/biome": "1.9.4",
         "@commitlint/cli": "^19.8.1",
         "@commitlint/config-conventional": "^19.8.1",
+        "@types/node": "^22.15.3",
         "husky": "^9.1.7",
         "tsx": "^4.19.4",
-        "turbo": "^2.5.3"
+        "turbo": "^2.5.3",
+        "typescript": "^5.8.3"
     },
     "packageManager": "pnpm@8.15.6",
     "engines": {
         "node": ">=18"
+    },
+    "dependencies": {
+        "zod": "^3.24.4"
     }
 }
