--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,12 +1,31 @@
 {
-    "extends": "@repo/typescript-config/base.json",
+    "extends": "../../packages/typescript-config/base.json",
     "compilerOptions": {
         "outDir": "dist",
         "rootDir": "src",
         "declaration": true,
         "declarationMap": true,
         "strict": true,
-        "types": ["node"]
+        "types": ["node"],
+
+        "module": "ESNext",
+        "moduleResolution": "bundler",
+        "target": "ESNext",
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+
+        "emitDeclarationOnly": true,
+        "allowImportingTsExtensions": true,
+        "paths": {
+            "@/*": ["./src/*"],
+            "@repo/typescript-config/*": ["../../packages/typescript-config/src/*"],
+            "@repo/schemas": ["../../packages/schemas/src/index.ts"],
+            "@repo/schemas/*": ["../../packages/schemas/src/*"],
+            "@repo/types": ["../../packages/types/src/index.ts"],
+            "@repo/types/*": ["../../packages/types/src/*"],
+            "@repo/utils": ["../../packages/utils/src/index.ts"],
+            "@repo/utils/*": ["../../packages/utils/src/*"]
+        }
     },
     "include": ["src"],
     "exclude": ["dist", "node_modules", "src/seeds"]
