fix: chamnge root dir and includes to solve imports problems

--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,7 +2,7 @@
     "extends": "../../packages/typescript-config/base.json",
     "compilerOptions": {
         "outDir": "dist",
-        "rootDir": "src",
+        "rootDir": "../",
         "declaration": true,
         "declarationMap": true,
         "strict": true,
@@ -27,6 +27,6 @@
             "@repo/utils/*": ["../../packages/utils/src/*"]
         }
     },
-    "include": ["src"],
+    "include": ["src", "../schemas/src", "../types/src"],
     "exclude": ["dist", "node_modules", "src/seeds"]
 }
