--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts",
         "dev": "echo 'Dev mode uses tsconfig paths (no build)'",
-        "check-types": "tsc --noEmit",
+        "typecheck": "tsc --noEmit",
         "test": "vitest run",
         "test:watch": "vitest",
         "lint": "biome check .",
