--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts",
         "dev": "tsc --watch",
-        "check-types": "tsc --noEmit",
+        "typecheck": "tsc --noEmit",
         "lint": "biome check .",
         "format": "biome format --write .",
         "check": "biome check --write .",
