--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,7 +15,7 @@
     "scripts": {
         "build": "tsc",
         "dev": "tsc --watch",
-        "check-types": "tsc --noEmit",
+        "typecheck": "tsc --noEmit",
         "test": "vitest run",
         "test:watch": "vitest",
         "lint": "biome check .",
