--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
     "$schema": "https://turborepo.com/schema.json",
-    "globalDependencies": [".env"],
     "ui": "tui",
+    "globalDependencies": ["**/.env.*local"],
     "tasks": {
         "build": {
             "dependsOn": ["^build"],
@@ -9,27 +9,20 @@
             "outputs": ["dist/**"]
         },
         "lint": {
-            "dependsOn": ["^lint"]
-        },
-        "check-types": {
-            "dependsOn": ["^check-types"]
+            "outputs": []
         },
         "dev": {
             "cache": false,
             "persistent": true
         },
-        "format": {
-            "outputs": []
-        },
-        "format:check": {
-            "outputs": []
-        },
-        "check": {
-            "dependsOn": ["^check"],
-            "outputs": []
-        },
         "clean": {
             "cache": false
+        },
+        "typecheck": {
+            "dependsOn": ["^typecheck"]
+        },
+        "format": {
+            "outputs": []
         },
         "test": {
             "dependsOn": ["build"],
@@ -39,6 +32,10 @@
         "test:watch": {
             "cache": false,
             "persistent": true
+        },
+        "test:coverage": {
+            "dependsOn": ["build"],
+            "outputs": ["coverage/**"]
         }
     },
     "concurrency": "20"
