fix: finish clean seed things from db package

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,12 +24,7 @@
         "db:migrate": "pnpm run drizzle-kit push:pg --config drizzle.config.ts",
         "db:generate": "pnpm run drizzle-kit generate:pg --config drizzle.config.ts",
         "db:studio": "pnpm run drizzle-kit studio --config drizzle.config.ts",
-        "db:regenerate": "pnpm run db:migrate -- --force && pnpm run db:seed:required && pnpm run db:seed:example",
-        "db:regenerate:required": "pnpm run db:migrate -- --force && pnpm run db:seed:required",
-        "db:regenerate:example": "pnpm run db:migrate -- --force && pnpm run db:seed:example",
-        "db:seed": "pnpm run db:seed:required && pnpm run db:seed:example",
-        "db:seed:required": "tsx ./src/seeds/required.seed.ts",
-        "db:seed:example": "tsx ./src/seeds/example.seed.ts",
+        "db:regenerate": "pnpm run db:migrate -- --force",
         "db:enum-migration": "tsx ./scripts/generate-enum-migrations.ts && tsx ./scripts/apply-latest-enum-migration.ts",
         "typecheck": "tsc --noEmit",
         "test": "vitest",
