fix: small update in db package

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,8 +24,11 @@
         "db:migrate": "pnpm run drizzle-kit push:pg --config drizzle.config.ts",
         "db:generate": "pnpm run drizzle-kit generate:pg --config drizzle.config.ts",
         "db:studio": "pnpm run drizzle-kit studio --config drizzle.config.ts",
-        "db:regenerate": "pnpm run db:migrate -- --force",
+        "db:regenerate": "pnpm run db:generate -- --force && pnpm run db:migrate",
         "db:enum-migration": "tsx ./scripts/generate-enum-migrations.ts && tsx ./scripts/apply-latest-enum-migration.ts",
+        "db:reset": "pnpm run db:drop && pnpm run db:push",
+        "db:drop": "pnpm run drizzle-kit drop --config drizzle.config.ts",
+        "db:push": "pnpm run drizzle-kit push:pg --config drizzle.config.ts",
         "typecheck": "tsc --noEmit",
         "test": "vitest",
         "test:file": "vitest run",
