--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -18,7 +18,7 @@
         "format": "biome format --write .",
         "check": "biome check --write .",
         "clean": "rm -rf node_modules dist",
-        "seed": "pnpm run db:seed:required && pnpm run db:seed:example",
+        "seed": "tsx ./src/cli.ts",
         "seed:required": "tsx ./src/seeds/required.seed.ts",
         "seed:example": "tsx ./src/seeds/example.seed.ts",
         "typecheck": "tsc --noEmit"
@@ -31,13 +31,13 @@
         "@repo/utils": "workspace:*",
         "@repo/db": "workspace:*",
         "@repo/service-core": "workspace:*",
-        "bcryptjs": "^3.0.2",
-        "drizzle-orm": "^0.29.5",
+        "pg": "^8.11.1",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*",
         "@types/node": "^22.15.3",
+        "@types/pg": "^8.15.1",
         "tsup": "^8.4.0",
         "tsx": "^4.19.4",
         "typescript": "^5.8.3"
